--- a/app/views/privacy_policy/index.html.haml
+++ b/app/views/privacy_policy/index.html.haml
@@ -91,8 +91,8 @@
         %h4.section-header Contact Us
         %p 
           If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at 
-          != "#{mail_to("lfoan@nickolglobal.com")}, " 
+          != "#{mail_to(ENV['EMAIL'])}, " 
           %span.text-nowrap
             Tel: 
-            = link_to "(+855) 012-907-806", "tel:012907806"
+            = link_to ENV['PHONE_NUMBER'], "tel:#{ENV['PHONE_NUMBER']}"
         .mb-5
