--- a/app/assets/stylesheets/_welcome.scss
+++ b/app/assets/stylesheets/_welcome.scss
@@ -9,8 +9,8 @@
   a:focus,
   .form-control:focus,
   .btn:focus {
-    border-color: #0d33a7;
-    box-shadow: 0 0 0 0.2rem rgba(78, 115, 223, 75%);
+    border-color: #0d33a7 !important;
+    box-shadow: 0 0 0 0.2rem rgba(78, 115, 223, 75%) !important;
   }
 
   .nav-tabs .nav-link:focus,
