Fixed select2 focus inconsistent

--- a/app/assets/stylesheets/_welcome.scss
+++ b/app/assets/stylesheets/_welcome.scss
@@ -6,8 +6,10 @@
 #reports-index {
   // Improve keyboard visibility when
   // user navigate using tab
+  
   a:focus,
   .form-control:focus,
+  .select2-container--focus .select2-selection,
   .btn:focus {
     border-color: #0d33a7 !important;
     box-shadow: 0 0 0 0.2rem rgba(78, 115, 223, 75%) !important;
