--- a/app/views/welcomes/_form.haml
+++ b/app/views/welcomes/_form.haml
@@ -35,20 +35,16 @@
                   - district_codes = Array.wrap(params[:district_code]).select(&:present?)
                   = f.input_field :districts, as: :hidden, name: "district_code[]", class: "form-control text-truncate", value: district_codes
               
-              -# time period
-              = f.input :start_date, as: :hidden, input_html: { class: "start_date", name: "start_date", value: @start_date }
-              = f.input :end_date, as: :hidden, input_html: { class: "end_date",name: "end_date", value: @end_date }
-
               .form-group.string.required.q_time_period.col-lg-3
                 %label.string.required
                   = t("welcomes.time_period")
                   %abbr{ title: t("required.string") } *
 
-                .input-group.daterange-container
-                  = f.input_field :time_period, class: "form-control string required datepicker_date", tabindex: 6, value: "#{@start_date} - #{@end_date}", name: "q[time_period]", id: "q_time_period"
-                  .input-group-append
-                    .input-group-text
-                      %i.fas.fa-calendar-alt.fa-sm
+                .input-group.input-daterange
+                  = f.input_field :start_date, class: "form-control string required datepicker", tabindex: 6, value: @start_date, name: "start_date", id: "q_start_date"
+                  .input-group-addon to
+                  = f.input_field :end_date, class: "form-control string required datepicker", tabindex: 6, value: @end_date, name: "end_date", id: "q_end_date"
+
               -# tab
               = f.input :active_tab, as: :hidden
 
