Enhance inconsistent border radius

--- a/app/views/welcomes/_form.haml
+++ b/app/views/welcomes/_form.haml
@@ -42,7 +42,7 @@
 
                 .input-group.input-daterange
                   = f.input_field :start_date, class: "form-control string required datepicker", tabindex: 6, value: @start_date, name: "start_date", id: "q_start_date"
-                  .input-group-addon to
+                  .input-group-addon= t("welcomes.daterange.to")
                   = f.input_field :end_date, class: "form-control string required datepicker", tabindex: 6, value: @end_date, name: "end_date", id: "q_end_date"
 
               -# tab
