--- a/app/assets/stylesheets/custom/_datepicker.scss
+++ b/app/assets/stylesheets/custom/_datepicker.scss
@@ -1,4 +1,12 @@
 .input-daterange {
+  input:first-child {
+    border-radius: 0.35rem 0 0 0.35rem;
+  }
+
+  input:last-child {
+    border-radius:  0 0.35rem 0.35rem 0;
+  }
+
   .input-group-addon {
     padding: 6px 12px;
     color: #555;
