fixed turbolinks reload issue

--- a/app/views/welcomes/_footer.haml
+++ b/app/views/welcomes/_footer.haml
@@ -7,5 +7,5 @@
 
         .separator
 
-        .terms-privacy.text-center
+        .terms-privacy.text-center{ "data-turbolinks": "false" }
           = link_to t('welcomes.privacy_policy'), privacy_policy_path, class: 'text-footer-sm'
