--- a/app/views/layouts/welcome.html.haml
+++ b/app/views/layouts/welcome.html.haml
@@ -4,7 +4,7 @@
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}
     = Gon::Base.render_data
     %meta{ name: "turbolinks-visit-control", content: "reload" }
-    %title= t(:title)
+    %title= t(:title).html_safe
     = display_meta_tags SocialMetaTag.to_meta_tags
     = csrf_meta_tags
     = csp_meta_tag
