--- a/app/views/shared/sb-admin/_sidebar.html.haml
+++ b/app/views/shared/sb-admin/_sidebar.html.haml
@@ -65,6 +65,11 @@
         %i.fas.fa-fw.fa-file-pdf
         %span= t('pdf_templates.title')
 
+    %li.nav-item{ class: css_active_class('schedule') }
+      = link_to schedules_path, class: "nav-link" do
+        %i.fas.fa-fw.fa-calendar-alt
+        %span= t('sidebar.schedules')
+
   .text-center.d-none.d-md-inline.mb-auto
     %button#sidebarToggle.rounded-circle.border-0
 
