--- a/app/views/schedules/_form.html.haml
+++ b/app/views/schedules/_form.html.haml
@@ -2,7 +2,7 @@
   .card-body
     = simple_form_for @schedule do |f|
       = f.input :name
-      = f.input :cron
+      = f.input :cron, error: t("schedules.invalid_cron_html")
       = f.input :worker
       = f.input :enabled
       = f.submit t("schedules.save"), class: "btn btn-primary"
