--- a/app/views/sites/settings/index.html.haml
+++ b/app/views/sites/settings/index.html.haml
@@ -8,13 +8,15 @@
 
 = render "shared/sb-admin/page_heading", title: t("settings.telegram_notification")
 
-%h5 Feedback notification
+%h5 
+  = t("settings.feedback_notification")
 - if @settings.feedbacks_setting.present?
   = render partial: 'feedback_setting', collection: @settings.feedbacks_setting
 - else
   = render partial: 'no_feedback_setting'
 
-%h5.mt-5 DO monthly report notification
+%h5.mt-5
+  = t 'settings.do_monthly_report'
 - if @settings.do_reports_setting.present?
   = render partial: 'report_setting', collection: @settings.do_reports_setting
 - else
