Enable manual cron

--- a/app/views/schedules/_form.html.haml
+++ b/app/views/schedules/_form.html.haml
@@ -4,13 +4,13 @@
       = f.input :name
       .form-group
         %label.d-block Repeat every month on
-        = f.input_field :day, min: 1, value: 1, class: "form-control d-inline-block cron-control"
+        = f.input_field :day, type: "number", min: 1, value: 1, class: "form-control d-inline-block cron-control"
         day, at 
         = f.input_field :time, type: "time", class: "form-control d-inline-block cron-control cron-time"
 
-      - if Rails.env == 'development'
-        %input#check_dev{ type: 'checkbox' }
-        %label{for: "check_dev"} This option is only available in development (testing)
+      - if Rails.env == "development"
+        %input#enable_manual_cron{ type: "checkbox" }
+        %label{for: "enable_manual_cron"} Enable manual cron setting
       = f.input :worker
       = f.input :enabled
       = f.submit t("schedules.save"), class: "btn btn-primary"
