--- a/app/views/schedules/_form.html.haml
+++ b/app/views/schedules/_form.html.haml
@@ -1,16 +1,18 @@
 .card.shadow.mb-4
   .card-body
     = simple_form_for @schedule do |f|
-      = f.input :name
+      = f.input :name, label: t("schedules.name")
       .form-group
-        %label.d-block Repeat every month on
+        %label.d-block= t "schedules.repeat"
         = f.input_field :day, type: "number", min: 1, value: 1, class: "form-control d-inline-block cron-control"
-        day, at 
+        = t "schedules.day"
+        ,
+        = t "schedules.at" 
         = f.input_field :time, type: "time", class: "form-control d-inline-block cron-control cron-time"
 
       - if Rails.env == "development"
         %input#enable_manual_cron{ type: "checkbox" }
-        %label{for: "enable_manual_cron"} Enable manual cron setting
-      = f.input :enabled
+        %label{for: "enable_manual_cron"}= t "schedules.manual"
+      = f.input :enabled, label: t("schedules.enabled")
       = f.submit t("schedules.save"), class: "btn btn-primary"
       = link_to t("schedules.cancel"), schedules_path, class: "btn btn-secondary"
