--- a/app/views/schedules/edit.html.haml
+++ b/app/views/schedules/edit.html.haml
@@ -1,3 +1,3 @@
-= render "shared/sb-admin/page_heading", title: "Edit schedule"
+= render "shared/sb-admin/page_heading", title: t("schedules.edit_title")
 
 = render "form"
