--- a/app/assets/stylesheets/schedules.scss
+++ b/app/assets/stylesheets/schedules.scss
@@ -6,4 +6,16 @@
   .cron-control.cron-time {
     width: 175px;
   }
+
+  .form-check {
+    padding: 0;
+  }
+
+  .form-check-label {
+    margin-left: 4px;
+  }
+
+  .schedule_enabled {
+    margin-top: 15px;
+  }
 }
