--- a/app/views/schedules/_form.html.haml
+++ b/app/views/schedules/_form.html.haml
@@ -32,6 +32,9 @@
           = pdf_form.input_field :content, as: :hidden, class: "pdf_template_content"
           #editor-container{ style: "height: 15rem; width: 100%; " }
             = raw @pdf_template.content
+        - pdf_form.object.decorate.variables.each do |variable|
+          %span.badge.badge-secondary= variable
 
-      = f.submit t("schedules.save"), class: "btn btn-primary"
-      = link_to t("schedules.cancel"), schedules_path, class: "btn btn-secondary"
+      .actions.mt-5
+        = f.submit t("schedules.save"), class: "btn btn-primary"
+        = link_to t("schedules.cancel"), schedules_path, class: "btn btn-secondary"
