remove lang code, add tippy, fix specs

--- a/app/views/schedules/_form.html.haml
+++ b/app/views/schedules/_form.html.haml
@@ -1,13 +1,14 @@
 .card.shadow.mb-4
   .card-body
     = simple_form_for @schedule do |f|
+      = f.input :enabled, label: t("schedules.enabled"), input_html: { class: 'toggle-control' }
       = f.input :name, label: t("schedules.name")
       .form-group
         %label= t "schedules.repeat"
         = t "schedules.day"
 
         .d-inline-block
-          = f.input_field :day, type: "number", min: 1, class: "form-control d-inline-block cron-control"
+          = f.input_field :day, type: "number", min: 1, class: "form-control d-inline-block cron-control cron-day"
           = f.error :day, class: 'position-absolute error-hint'
 
         = t "schedules.at"
@@ -19,16 +20,12 @@
       - if ENV['MANUAL_ENABLED'] == 'true'
         %input.toggle-control#enable_manual_cron{ type: "checkbox" }
         %label{for: "enable_manual_cron"}= t "schedules.manual"
+        = image_tag "info.png", id: "info", style: "width: 16px; vertical-align: super;"
 
-      = f.input :enabled, label: t("schedules.enabled"), input_html: { class: 'toggle-control' }
-
-      %h5.mt-4= t("pdf_templates.title")
+      %h5.mt-4= t("schedules.notify_with_template")
       = f.fields_for :pdf_template do |pdf_form|
-        = pdf_form.input :name
-        = pdf_form.input :lang_code, label: t("pdf_templates.language_code"), collection: PdfTemplate::ALLOWED_LANGUAGE_CODES, label_method: lambda { |lang_code| t("pdf_templates.#{lang_code}") }, include_blank: false
 
         .form-group
-          = pdf_form.label :content
           = pdf_form.input_field :content, as: :hidden, class: "pdf_template_content"
           #editor-container{ style: "height: 15rem; width: 100%; " }
             = raw @pdf_template.content
