--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,6 +7,7 @@
 @import "sb-admin-webfonts-override";
 @import "startbootstrap-sb-admin-2/css/sb-admin-2.min";
 @import "flatpickr/dist/themes/material_blue";
+@import "tippy.js/dist/tippy.css";
 
 @import "bootstrap-toggle/css/bootstrap-toggle";
 @import "bootstrap-toggle-custom";
