--- a/app/views/sites/pdf_templates/most_popular_service.html.haml
+++ b/app/views/sites/pdf_templates/most_popular_service.html.haml
@@ -5,7 +5,7 @@
         .card-header.position-relative
           .d-flex.flex-row.align-items-center.justify-content-between
             .h5.m-0.font-weight-bold.d-flex.justify-content-center.align-items-center
-              %span.chart-name.text-primary.d-inline-block.mr-1.chart-head.text-capitalize
+              %span.chart-name.text-primary.mr-1.chart-head.text-capitalize
                 = I18n.t("welcomes.number_access_by_main_services")
         .card-body
           .chart-wrapper.pt-4.d-flex.justify-content-around.align-items-center.position-relative{ style: "width: inherit;"}
