--- a/app/views/welcomes/_popup_modal.html.haml
+++ b/app/views/welcomes/_popup_modal.html.haml
@@ -6,7 +6,7 @@
         %button.close{"aria-label" => "Close", "data-dismiss" => "modal", :type => "button"}
           %span{"aria-hidden" => "true"} ×
       .modal-body{ "data-state": "prune" }
-        = image_tag "pop-up-message.png", class: 'img-fluid', alt: "Welcome to OW4C public dashboard"
+        = image_tag "pop-up-message.png", class: 'img-fluid', alt: t("welcomes.popup_alt_text")
       .modal-footer
         %button.btn.btn-secondary{"data-dismiss" => "modal", :type => "button", value: "canceled"}
           = t("shared.cancel")
