Fix lightbox2 asset not found

--- a/app/views/layouts/minimal.html.haml
+++ b/app/views/layouts/minimal.html.haml
@@ -10,5 +10,6 @@
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
   %body{ id: css_class_name, style: 'overflow-y: scroll' }
     = yield
+    = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
     
     
