--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,8 +4,9 @@
 @import "select2/dist/css/select2.min";
 @import "select2-bootstrap-theme/dist/select2-bootstrap.min";
 @import "highlight.js/scss/a11y-light";
-@import "lightbox2/src/css/lightbox.css";
+@import "lightbox";
 @import "custom/lightbox2";
+
 @import "cookieconsent/build/cookieconsent.min";
 
 @import "startbootstrap-sb-admin-2/vendor/fontawesome-free/css/all.min";
