--- a/app/views/sites/pdf_templates/feedback_sub_categories.html.haml
+++ b/app/views/sites/pdf_templates/feedback_sub_categories.html.haml
@@ -6,7 +6,7 @@
           .d-flex.flex-row.align-items-center.justify-content-between
             .h5.m-0.font-weight-bold.d-flex.justify-content-center.align-items-center
               %span.chart-name.text-primary.mr-1.chart-head.text-capitalize
-                = I18n.t("dashboard.total_user_visit")
+                = I18n.t("welcomes.feedback_by_sub_categories", name: site_name)
         .card-body
           .chart-wrapper.pt-4.d-flex.justify-content-around.align-items-center.position-relative{ style: "width: inherit; "}
             %canvas#chart_feedback_by_sub_category
