--- a/app/views/sites/pdf_templates/total_user_feedback.html.haml
+++ b/app/views/sites/pdf_templates/total_user_feedback.html.haml
@@ -16,7 +16,7 @@
           .d-flex.flex-row.align-items-center.justify-content-between
             .h5.m-0.font-weight-bold.d-flex.justify-content-center.align-items-center
               %span.chart-name.text-primary.mr-1.chart-head.text-capitalize
-                = I18n.t("dashboard.total_user_feedback")
+                = I18n.t("welcomes.overall_citizen_feedback")
         .card-body
           .chart-wrapper.pt-4.d-flex.justify-content-around.align-items-center.position-relative{ style: "width: inherit;"}
             %canvas#total_user_feedback
