--- a/app/views/provincial_usages/index.html.haml
+++ b/app/views/provincial_usages/index.html.haml
@@ -6,7 +6,7 @@
     = render "dashboard/filter_options"
 
     #table.table-responsive
-      %table.table
+      %table.table.table-hover
         %thead
           %tr
             - @provincial_usages.t_headers.each do |h|
