--- a/app/views/provincial_usages/index.html.haml
+++ b/app/views/provincial_usages/index.html.haml
@@ -9,14 +9,15 @@
       %table.table.table-hover
         %thead
           %tr
-            - @provincial_usages.t_headers.each do |h|
+            - @provincial_usages.t_headers.each do |header|
               %th{:scope => "col"}
-                = h[:value]
+                = header[:translate]
                 %span.sort
-                  = link_to sort_url_for(h[:key], 'asc'), class: ['lh-sm', active_sort(h[:key], 'asc')] do
-                    %i.fa.fa-caret-up.lh-sm
-                  = link_to sort_url_for(h[:key], 'desc'), class: ['lh-sm', active_sort(h[:key], 'desc')] do
-                    %i.fa.fa-caret-down.lh-sm
+                  - if header[:sortable_attr].present?
+                    = link_to sort_url_for(header[:sortable_attr], 'asc'), class: ['lh-sm', active_sort(header[:sortable_attr], 'asc')] do
+                      %i.fa.fa-caret-up.lh-sm
+                    = link_to sort_url_for(header[:sortable_attr], 'desc'), class: ['lh-sm', active_sort(header[:sortable_attr], 'desc')] do
+                      %i.fa.fa-caret-down.lh-sm
           %tr.total-row
             %td.font-weight-bold
               = t("provincial_usages.total")
