--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -5,8 +5,8 @@
 #dashboard-chatbot_dashboard-show {
   .platform-list {
     border-bottom: 1px solid #ccc;
-    max-width: 60%;
     font-size: 1em;
+    margin: 6px 15px 0 0;
 
     .list-inline-item:not(:last-child) {
       margin-right: 1.5em;
