Update provincial usage icon

--- a/app/views/shared/sb-admin/_sidebar.html.haml
+++ b/app/views/shared/sb-admin/_sidebar.html.haml
@@ -20,7 +20,7 @@
     - if policy(:provincial_usage).index?
       %li.nav-item{ class: css_active_class('provincial_usages') }
         = link_to provincial_usages_path, class: "nav-link provincial-usage" do
-          %i.fas.fa-fw.fa-circle-notch
+          %i.fas.fa-fw.fa-table
           %span{style: "margin-left: 0.25rem;"}
             = t('sidebar.provincial_usages')
 
