--- a/app/views/dictionaries/_create-new-dictionary-modal.haml
+++ b/app/views/dictionaries/_create-new-dictionary-modal.haml
@@ -1,4 +1,4 @@
 #newDictionaryModal.modal.fade{"aria-hidden" => "true", "data-backdrop": "static", "aria-labelledby" => "newSiteLabel", :role => "dialog", :tabindex => "-1"}
-  .modal-dialog.modal-dialog-centered{:role => "document"}
+  .modal-dialog.modal-lg.modal-dialog-centered{:role => "document"}
     .modal-content
       = render "form", dictionary: dictionary
